Sat May 06 16:46:13 2000  George Lebl <jirka@5z.com>

	* gnome-config.c (_gnome_config_get_float_with_default)
	  (_gnome_config_set_float): setlocae for LC_NUMERIC to "C" and
	  then back to original locale when reading and writing floats
	  so that we can read/write floats over different locales

	* gnome-score.c (gnome_get_score_file_name) (log_score): 
	  The same as above.  Fixes bugs #10404, #10257

Fri May 05 20:53:11 2000  George Lebl <jirka@5z.com>

	* gnome-url.c: gnome_url_show had it's return value inversed, duh!

Fri May 05 19:22:30 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: include gnome-i18nP.h rather then gnome-i18n.h

	* gnome-url.[ch]: add an error argument to gnome_url_show_full
	  Fix one memory leak and one GList corruption bug.  Made it use
	  gnome_exec_async rather then shell.  It will now correctly handle
	  URIs with weird characters and no longer uses printf format strings
	  taken from files.  When the handler is gnome-moz-remote, it
	  first checks if the program ('netscape' or whatever gnome-moz-remote
	  uses) actually exists.

	* gnomelib-init2.c: fix a warning

Sun Mar 26 13:31:28 2000  George Lebl <jirka@5z.com>

	* gnome-config.[ch],parse-path.cP: return TRUE/FALSE from the sync
	  functions indicating an error in writing to a file, and do
	  s/gint/gboolean/ a bit

	* gnome-ditem.[ch]: return TRUE/FALSE from the _save function to
	  indicate an error in saving

Mon Mar 20 21:10:53 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: if no "C" locale setting found for name, set it
	  to the filename or "Unknown" when saving.  This prevents problem
	  with created files.  Also eliminate a possible buffer overrun.

Mon Mar 20 20:36:35 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: Apply patch from miguel made to gnome-libs-1-0,
	  fix segfault when loading illegal files by correctly setting state
	  after ignore.  also correctly set state after premature end of line
	