@@ -1,3 +1,8 @@
+2000-05-18  Miguel de Icaza  <miguel@gnu.org>
+
+	* gnome-config.c (gnome_config_iterator_next): Implement as
+	documented.  
+	
 Sat May 06 16:46:13 2000  George Lebl <jirka@5z.com>
 
 	* gnome-config.c (_gnome_config_get_float_with_default)
